<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fcc_bridge</name>
  <version>1.1.0</version>
  <description>Bridge between the FCC and the ROS network. Implements safety checks.</description>
  <maintainer email="job8197@thi.de">Johan</maintainer>
  <license>MIT</license>
  <url>https://github.com/THI-Drone/fcc_bridge_package</url>
  <author email="job8197@thi.de">Johan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>interfaces</depend>
  <depend>common_package</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
